--- a/.github/workflows/pulumi.yml
+++ b/.github/workflows/pulumi.yml
@@ -98,13 +98,24 @@ jobs:
               ;;
           esac
 
+          # Set Role Name based on environment
+          # Root account uses DNXAccess, other accounts use InfraDeployAccess
+          case "${{ inputs.environment }}" in
+            root)
+              echo "ROLE_NAME=DNXAccess" >> $GITHUB_ENV
+              ;;
+            *)
+              echo "ROLE_NAME=InfraDeployAccess" >> $GITHUB_ENV
+              ;;
+          esac
+
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
-          role-to-assume: arn:aws:iam::${{ env.ACCOUNT_ID }}:role/InfraDeployAccess
+          role-to-assume: arn:aws:iam::${{ env.ACCOUNT_ID }}:role/${{ env.ROLE_NAME }}
           role-duration-seconds: 3600
 
       - name: Verify AWS Identity
