--- a/.github/workflows/pulumi.yml
+++ b/.github/workflows/pulumi.yml
@@ -109,6 +109,7 @@ jobs:
           aws-region: ${{ env.AWS_REGION }}
           role-to-assume: arn:aws:iam::${{ env.ACCOUNT_ID }}:role/${{ env.ROLE_NAME }}
           role-duration-seconds: 3600
+          role-skip-session-tagging: true
 
       - name: Verify AWS Identity
         run: aws sts get-caller-identity
